# ATI-FTsensor_NI-DAQ

./: .gitignore  CMakeLists.txt  CmakeLists.txt  FT11712.cal  Output.csv  README.md
executable/: CMakeLists.txt  main.cpp
include/: ATI_FT.hpp
lib_ati/: CMakeLists.txt  README.md
lib_ati/calibration/: FT35366.cal
lib_ati/include/: ATI_FT.hpp
lib_ati/libs/LINUX/: makefile
lib_ati/src/: ATI_FT.cpp
src/: ATI_FT.cpp
